fixes layout issues in detail view

--- a/unizin-parent/unizin-search/src/main/js/containers/result.scss
+++ b/unizin-parent/unizin-search/src/main/js/containers/result.scss
@@ -1,7 +1,7 @@
 @import '../variables.scss';
 $result_left_padding: $cover_width + $global_padding + 1rem;
 
-.result-details {
+:local .result-details {
   padding: $global_padding;
 
   header {
